--- a/templates/base.html
+++ b/templates/base.html
@@ -13,19 +13,19 @@
     
   <title>{% block pageTitle %} {% endblock %}</title>
 
-   <!-- <link rel="stylesheet" href="{% static 'web/assets/mobirise-icons/mobirise-icons.css' %}">  -->
+ <!-- <link rel="stylesheet" href="{% static 'web/assets/mobirise-icons/mobirise-icons.css' %}"> -->
   <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-grid.min.css' %}">
-  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-reboot.min.css' %}">
+  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-grid.min.css' %}"> 
+  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-reboot.min.css' %}"> 
   <link rel="stylesheet" href="{% static 'tether/tether.min.css' %}">
   <link rel="stylesheet" href="{% static 'dropdown/css/style.css' %}">
-  <!-- <link rel="stylesheet" href="{% static 'animatecss/animate.min.css' %}"> -->
+  <link rel="stylesheet" href="{% static 'animatecss/animate.min.css' %}">
   <link rel="stylesheet" href="{% static 'theme/css/style.css' %}">
-  <!-- <link rel="preload" as="style" href="{% static 'mobirise/css/mbr-additional.css' %}"> -->
+  <link rel="preload" as="style" href="{% static 'mobirise/css/mbr-additional.css' %}">
   <link rel="stylesheet" href="{% static 'mobirise/css/mbr-additional.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'socicon/css/styles.css' %}">
   
-  
-  
+ <!-- ***************** HEADER STRIP ***************--> 
 </head>
 <body>
   <section class="menu cid-s5iISe2c23" once="menu" id="menu1-8"> 
@@ -51,10 +51,18 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="aboutUS.html" aria-expanded="true">
-                        
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+                <li class="nav-item"><a class="nav-link link text-black display-4" href="aboutUs" aria-expanded="true">
+                  
                         About Us
-                    </a></li></ul>
+                    </a>
+                </li>
+                <li class="nav-item"><a class="nav-link link text-black display-4" href="contactUs" aria-expanded="true">
+                        
+                    Contact Us
+                </a>
+            </li>
+            </ul>
             
         </div>
     </nav>
@@ -66,9 +74,59 @@
 {%endblock%}
 
 
+<!-- ******************** FOOTER ********************-->
+<section once="footers" class="cid-s5EDG19ZPH" id="footer7-a"> 
+    <div class="container">
+        <div class="media-container-row align-center mbr-white">
+            <div class="row row-links">
+                <ul class="foot-menu">                   
+                <li class="foot-menu-item mbr-fonts-style display-7">
+                        <a class="mbr-bold text-black" href="#" target="_blank">About us</a>
+                </li><li class="foot-menu-item mbr-fonts-style display-7">
+                    <a class="mbr-bold text-black" href="#" target="_blank">Contact us</a>
+                </li></ul>
+            </div>
+            <div class="row social-row">
+                <div class="social-list align-right pb-2">                       
+                <div class="soc-item">
+                        <a href="https://twitter.com" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
+                        </a>
+                    </div><div class="soc-item">
+                        <a href="https://www.facebook.com" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
+                        </a>
+                    </div>
+                    <div class="soc-item">
+                        <a href="https://www.youtube.com" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
+                        </a>
+                    </div>
+                    <div class="soc-item">
+                        <a href="https://instagram.com" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
+                        </a>
+                    </div>
+                    <div class="soc-item">
+                        <a href="https://plus.google.com" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-googleplus socicon" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-copirayt">
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
+                    © Copyright 2020 nodeConnect- All Rights Reserved
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- ****************SCRIPTS *************************************** -->
   <script src="{% static 'web/assets/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'popper/popper.min.js' %}"></script>
-  <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+ <!-- <script src="{% static 'popper/popper.min.js' %}"></script> -->
+  <!--<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script> -->
   <script src="{% static 'tether/tether.min.js' %}"></script>
   <script src="{% static 'dropdown/js/nav-dropdown.js' %}"></script>
   <script src="{% static 'dropdown/js/navbar-dropdown.js' %}"></script>
