--- a/templates/home.html
+++ b/templates/home.html
@@ -4,35 +4,30 @@
 
 {%block content%}
 
-
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="header1 cid-s5hTifxxmG" id="header16-6">
- 
+<!-- <section class="engine">
+    <a href="https://mobirise.info/o">free portfolio website templates</a>
+</section> -->
+<section class="header1 cid-s5hTifxxmG" id="header16-6">  
     <div class="container">
         <div class="row justify-content-md-center">
-            <div class="col-md-10 align-center">
-                
-                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">Practice, improve, showcase and get hired</h3>
-                
-                
+            <div class="col-md-10 align-center">                
+                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">Practice, improve, showcase and get hired</h3>                               
             </div>
         </div>
     </div>
-
 </section>
 
-<section class="features3 cid-s5hXWwfo5o" id="features3-7">
-    
+<section class="features3 cid-s5hXWwfo5o" id="features3-7">    
     <div class="container">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6">
-                <div class="card-wrapper">
-                    
+                <div class="card-wrapper">                    
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
                             Engineers</h4>
                         <p class="mbr-text mbr-fonts-style display-4">Practice and take your programming skills to the next level with hands-on programming platform. Solve the programming challenges which mock the industrial standard application module level programming for real or simulated hardware. Build your scorecard and earn level completion certifications to demonstrate the skills and capabilities. And many more..</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-success display-4">Sign up or Login</a></div>
+                    <div class="mbr-section-btn text-center"><a href="userAccount/loginOrRegister" class="btn btn-success display-4">Sign up or Login</a></div>
                 </div>
             </div>
 
