--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
                             Engineers</h4>
                         <p class="mbr-text mbr-fonts-style display-4">Practice and take your programming skills to the next level with hands-on programming platform. Solve the programming challenges which mock the industrial standard application module level programming for real or simulated hardware. Build your scorecard and earn level completion certifications to demonstrate the skills and capabilities. And many more..</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="userAccount/loginOrRegister" class="btn btn-success display-4">Sign up or Login</a></div>
+                    <div class="mbr-section-btn text-center"><a href="userAccount/login" class="btn btn-success display-4">Sign up or Login</a></div>
                 </div>
             </div>
 
