--- a/templates/register.html
+++ b/templates/register.html
@@ -9,20 +9,26 @@
 <body>   
 
 <section>
-    <div class = "mainbase"> 
-    <form action ="login" mehtod ="post">    
+    <div class = "mainbase">       
         <div class = "form-box">
-            <form id ="login" action ="register" mehtod ="post" class = "input-group">
-                <input type ="text" class ="input-field" placeholder= "First Name" required>
-                <input type ="text" class ="input-field" placeholder= "Last Name" required>
-                <input type ="email" class ="input-field" placeholder= "Email" required>
-                <input type ="password" class ="input-field" placeholder= "Password" required>
-                <input type ="password" class ="input-field" placeholder= "Re-enter Password" required>
+            <form id ="register" action ="register" method ="post" class = "input-group">
+                {% csrf_token %}
+                <input type ="text" class ="input-field" name ="first_name" placeholder= "First Name" required>
+                <input type ="text" class ="input-field" name ="last_name" placeholder= "Last Name" required>
+                <input type ="text" class ="input-field" name ="user_name" placeholder= "Username" required>
+                <input type ="email" class ="input-field" name ="email" placeholder= "Email" required>
+                <input type ="password" class ="input-field" name ="password1" placeholder= "Password" required>
+                <input type ="password" class ="input-field" name ="password2" placeholder= "Re-enter Password" required>
+                <div>
+                    {%for message in messages%}
+                    <h3>{{message}}</h3>
+                    {%endfor%}
+                </div>
                 <button type ="submitt" class = "submitt-bttn">Register</button>
-                <p><a href="login">Already have account, Sign In</a></p>
+                <p><a href="login"class = "anchor-link">Already have account, Sign In</a></p>
             </form>
         </div>
-    </form>
+    
     </div>
 </section>
 
