--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,9 +34,9 @@
     left:0;
     position: absolute;
     width: 110px;
-    height:100%;
-    background: linear-gradient(to right, #ff105f, #ffad06);
-    border-radius: 30px;
+    height:100px;
+    background: hsl(59, 100%, 51%);
+    border-radius: 100px;
     transition: .5s;
 }
 
@@ -65,10 +65,10 @@
     margin: 20px 30px;
     cursor: pointer;
     display: block;
-    background: linear-gradient(to right, #ff105f, #ffad06);
+    background: hsl(59, 100%, 51%);
     border: 0;
     outline: none;
-    border-radius: 30ps;
+    border-radius: 100px;
     position: center;
 }
 
